force-app/main/default/objects/SQX_Complaint_Feedback__c/SQX_Complaint_Feedback__c.object-meta.xml
<CustomObject>
    <label>Complaint Feedback</label>
    <nameField>
        <displayFormat>COF-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compaint Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>