force-app/main/default/objects/SQX_Complaint_Feedback__c/fields/CQ_Comment__c.field-meta.xml
<CustomField>
    <fullName>CQ_Comment__c</fullName>
    <label>Additional Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>