force-app/main/default/objects/SQX_Complaint_Feedback__c/fields/CQ_Experience__c.field-meta.xml
<CustomField>
    <fullName>CQ_Experience__c</fullName>
    <label>Your Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Highly Unsatisfied</fullName>
            </value>
            <value>
                <fullName>2 - Satisfied</fullName>
            </value>
            <value>
                <fullName>3 - Highly Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>