force-app/main/default/objects/SQX_Complaint_Feedback__c/fields/CQ_Issue_Resolved__c.field-meta.xml
<CustomField>
    <fullName>CQ_Issue_Resolved__c</fullName>
    <label>Is the Issue Resolved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>