force-app/main/default/objects/SQX_Complaint_Feedback__c/fields/CQ_SQX_Related_To__c.field-meta.xml
<CustomField>
    <fullName>CQ_SQX_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>SQX_Complaint__c</referenceTo>
    <relationshipLabel>Compaint Feedbacks</relationshipLabel>
    <relationshipName>Compaint_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>