force-app/main/default/objects/SQX_Complaint_Feedback__c/listViews/Customer_Success_Team_SQX_Complaint_Feedback.listView-meta.xml
<ListView>
    <fullName>Customer_Success_Team_SQX_Complaint_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Success Team</label>
    <queue>Customer_Success_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>